Dynamic Indice List page (#130)
* refactoring IndiceList.razor

* better with components

* testing GetAllIndicesAsync() from server api

* StateHasChangeg() + tests

* mission failed :wastebasket:

* Only load compositions when indice details clicked

* quick cleanup

* one for codacy
