# src/Trakx.IndiceManager.Server/openApi3.json
@@ -139,19 +139,18 @@
         ],
         "summary": "Tries to get all of the compositions for an indice.",
         "operationId": "IndiceCreation_GetCompositionsBySymbol",
-        "requestBody": {
-          "x-name": "symbol",
-          "description": "The symbol of the indice that we want the compositions. Not to be confused with the composition symbol.",
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "string"
-              }
-            }
-          },
-          "required": true,
-          "x-position": 1
-        },
+        "parameters": [
+          {
+            "name": "symbol",
+            "in": "query",
+            "description": "The symbol of the indice that we want the compositions. Not to be confused with the composition symbol.",
+            "schema": {
+              "type": "string",
+              "nullable": true
+            },
+            "x-position": 1
+          }
+        ],
         "responses": {
           "200": {
             "description": "A list of the past and present composition for a given indice",
@@ -528,6 +527,13 @@
           },
           "naturalUnit": {
             "type": "integer"
+          },
+          "indiceCompositions": {
+            "type": "array",
+            "nullable": true,
+            "items": {
+              "$ref": "#/components/schemas/IndiceCompositionModel"
+            }
           }
         }
       },
